added New API endpoints
